--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-4c64379 elementor-widget elementor-widget-heading" data-id="4c64379" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h4 class="elementor-heading-title elementor-size-default">I’m <b>Karan Gurdittaa</b>, a nature photographer drawn to the wild, quiet, and often overlooked moments in nature. Through my lens, I capture the beauty, emotion, and stillness found in landscapes and wildlife — sharing stories that inspire connection and wonder.
+					<h4 class="elementor-heading-title elementor-size-default">I’m <b>Karan Gurdittaa</b>, a nature photographer drawn to the wild, quiet, and often overlooked moments in nature. Through my lens, I capture the beauty, emotion, and stillness found in landscapes and people — sharing stories that inspire connection and wonder.
 
 Explore my portfolio to see the world as I see it — raw, serene, and endlessly beautiful.</h4>				</div>
 				</div>
