--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+	<meta name="robots" content="noindex, nofollow">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
 	<link rel="pingback" href="./xmlrpc.php">
 	<title>Karan Gurdittaa &#8211; Nature Photography</title>
-<meta name="robots" content="max-image-preview:large">
+<! <meta name="robots" content="max-image-preview:large"> >
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	<link rel="alternate" type="application/rss+xml" title="Karan Gurdittaa &raquo; Feed" href="./feed/index.html">
 <link rel="alternate" type="application/rss+xml" title="Karan Gurdittaa &raquo; Comments Feed" href="./comments/feed/index.html">
